...
      onSubmitted: (_) {
        FocusScope.of(context).unfocus();
        onChanged();
      },
      textInputAction: TextInputAction.search,
      decoration: const InputDecoration(
        labelText: 'Search text, people, relations',
        prefixIcon: Icon(Icons.search),
        border: OutlineInputBorder(),
      ),
    );
  }
}
...
